# zjedztrawke2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
data/: .map.swp  CMakeLists.txt  beepbox.txt  button.flac  ding.flac  efekt.flac  menu.flac  music.flac  net.dosowisko.zjedztrawke2.appdata.xml  no.flac  tada.flac  zjedztrawke2.desktop
data/icons/: CMakeLists.txt  icon.rc  zjedztrawke2.icns
flatpak/: net.dosowisko.zjedztrawke2.json
src/: CMakeLists.txt  common.c  common.h  main.c
src/gamestates/: CMakeLists.txt  dosowisko.c  empty.c  example.c  game.c  holypangolin.c  iofist.c  menu.c
